(MSVC 360) Fix MSVC 360 solution for Mednafen PCFX

--- a/msvc/pcfx/msvc-2010-360/msvc-2010-360.vcxproj
+++ b/msvc/pcfx/msvc-2010-360/msvc-2010-360.vcxproj
@@ -48,8 +48,10 @@
     <ClCompile Include="..\..\..\mednafen\FileStream.cpp" />
     <ClCompile Include="..\..\..\mednafen\FileWrapper.cpp" />
     <ClCompile Include="..\..\..\mednafen\general.cpp" />
-    <ClCompile Include="..\..\..\mednafen\hw_cpu\huc6280\cpu_huc6280.cpp" />
-    <ClCompile Include="..\..\..\mednafen\hw_misc\arcade_card\arcade_card.cpp" />
+    <ClCompile Include="..\..\..\mednafen\hw_cpu\v810\fpu-new\softfloat.c" />
+    <ClCompile Include="..\..\..\mednafen\hw_cpu\v810\v810_cpu.cpp" />
+    <ClCompile Include="..\..\..\mednafen\hw_cpu\v810\v810_cpuD.cpp" />
+    <ClCompile Include="..\..\..\mednafen\hw_sound\pce_psg\pce_psg.cpp" />
     <ClCompile Include="..\..\..\mednafen\hw_video\huc6270\vdc_video.cpp" />
     <ClCompile Include="..\..\..\mednafen\math_ops.cpp" />
     <ClCompile Include="..\..\..\mednafen\md5.cpp" />
@@ -57,18 +59,22 @@
     <ClCompile Include="..\..\..\mednafen\MemoryStream.cpp" />
     <ClCompile Include="..\..\..\mednafen\mempatcher.cpp" />
     <ClCompile Include="..\..\..\mednafen\okiadpcm.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\hes.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\huc.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\huc6280.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\input.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\pce.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\pcecd.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\pcecd_drive.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\psg.cpp" />
-    <ClCompile Include="..\..\..\mednafen\pce_fast-09333\vdc.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\fxscsi.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\huc6273.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\input.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\input\gamepad.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\input\mouse.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\interrupt.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\jrevdct.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\king.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\pcfx.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\rainbow.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\soundbox.cpp" />
+    <ClCompile Include="..\..\..\mednafen\pcfx-09333\timer.cpp" />
     <ClCompile Include="..\..\..\mednafen\player.cpp" />
     <ClCompile Include="..\..\..\mednafen\settings.cpp" />
     <ClCompile Include="..\..\..\mednafen\sound\Blip_Buffer.cpp" />
+    <ClCompile Include="..\..\..\mednafen\sound\OwlResampler.cpp" />
     <ClCompile Include="..\..\..\mednafen\sound\Stereo_Buffer.cpp" />
     <ClCompile Include="..\..\..\mednafen\state.cpp" />
     <ClCompile Include="..\..\..\mednafen\Stream.cpp" />
